--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
         "moment-timezone": "^0.5.31",
         "nodemailer": "^6.9.16",
         "object-fit-images": "^3.2.3",
+        "postcss": "^8.5.6",
         "rellax": "^1.12.1",
         "swiper": "^4.5.1"
     },
@@ -141,7 +142,7 @@
         "@babel/core": "^7.16.0",
         "@babel/preset-env": "^7.16.4",
         "@babel/register": "^7.16.0",
-        "autoprefixer": "^10.4.0",
+        "autoprefixer": "^10.4.21",
         "babel-loader": "^8.2.3",
         "browser-sync": "^2.27.7",
         "clean-css": "^5.2.2",
